<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rating_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="username" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <RadioGroup
        android:id="@+id/Role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left">

        <TextView
            android:id="@+id/roleSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="Select a Role"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RadioButton
            android:id="@+id/roleAdministrator"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="Administrator"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/roleEventOrganizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Event organizer" />

        <RadioButton
            android:id="@+id/roleParticipant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Participant" />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>

    <TextView

        android:id="@+id/loginNow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>